# graphics

./: .gitignore  CMakeLists.txt  data_app.cpp  debug  file_reader.cpp  file_reader.h  main.cpp  run  triangle_app.cpp  uniform_app.cpp
data/: fragment.glsl  vertex.glsl
triangle/: fragment.glsl  moving_vertex.glsl  run  tess_control.glsl  tess_eval.glsl  vertex.glsl
uniform/: vertex.glsl
